Updated Github Links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="top-nav">
     <div class="contact-nav">
-      <div class="link-hover"><a class='bx bxl-github' href="https://github.com/aidan-ma316" target="_blank"
+      <div class="link-hover"><a class='bx bxl-github' href="https://github.com/aidanmara" target="_blank"
           style="font-size: 48px;"></a></div>
       <div class="link-hover"><a class='bx bxl-linkedin' href="https://www.linkedin.com/in/aidan-mara-b57208187/"
           target="_blank" style="font-size: 46px;"></a></div>
@@ -108,7 +108,7 @@
           </div>
 
           <div class="links">
-            <a class='bx bxl-github' href="https://github.com/aidan-ma316/AndroidPlannerApp" target="_blank"></a>
+            <a class='bx bxl-github' href="https://github.com/aidanmara/AndroidPlannerApp" target="_blank"></a>
           </div>
 
         </div>
@@ -156,7 +156,7 @@
           </div>
 
           <div class="links">
-            <a class='bx bxl-github' href="https://github.com/aidan-ma316?tab=repositories" target="_blank"></a>
+            <a class='bx bxl-github' href="https://github.com/aidanmara?tab=repositories" target="_blank"></a>
           </div>
 
         </div>
