--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Aidan Mara's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="/a-icon.png">
   <link href="style.css" rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px)" />
   <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="stylesmobile.css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
