--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <h2>Tools and Frameworks</h2>
           <h3>(Proficient) Git, AGILE, MongoDB, Unity, Data Structures</h3>
           <h3>
-            (Familiar) Tensorflow, NodeJS, Android Studio
+            (Familiar) Tensorflow, NodeJS, Flask, Android Studio
           </h3>
         </div>
 
@@ -198,14 +198,14 @@
         <div class="skill-list">
           <h2>Bachelor's Degree in Computer Science</h2>
           <h3>California State University, Long Beach</h3>
-          <h4>2024 • cum laude</h4>
+          <h4>2024 • 3.67 GPA • cum laude</h4>
           <h4>President's list 4 of 4 semesters</h4>
         </div>
 
         <div class="skill-list">
           <h2>Associates's Degree in Computer Science</h2>
           <h3>Moorpark College</h3>
-          <h4>2022 • 3.5 GPA</h4>
+          <h4>2022 • 3.6 GPA</h4>
         </div>
 
       </div>
