fixed email buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
           target="_blank" style="font-size: 46px;"></a></div>
     </div>
 
-    <button id="hire-me-button">Hire Me </button>
+    <button id="hire-me-button">Hire Me</button>
+
+    <script>
+      document.getElementById('hire-me-button').addEventListener('click', function() {
+          window.location.href = 'mailto:aidanmara@gmail.com?subject=Hiring';
+      });
+      </script>
+
   </div>
 
   <div class="content-container">
@@ -44,7 +51,7 @@
       <div class="text-area">
         <h1>Aidan Mara</h1>
         <h2>Computer Science Graduate</h2>
-        <h3>Los Angeles, CA • <a href="mailto:example@example.com">aidanmara@gmail.com</a> </h3>
+        <h3>Los Angeles, CA • <a href="mailto:aidanmara@gmail.com">aidanmara@gmail.com</a> </h3>
 
         <p>I like programming things and learning about new tech. :)</p>
         <a href="./AidanMaraResume.pdf" download>view resume as
