--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </div>
 
           <div class="links">
-            <a class='bx bxl-github'></a>
+            <a class='bx bxl-github' href="https://github.com/aidanmara/TheConservatoryGame"></a>
           </div>
 
         </div>
